app/assets/stylesheets/navbar.scss
.navbutton-active{
	background-color:rgba(32, 26, 22, 0.9)!important;
}
span.navbar-toggler-icon{
	cursor:pointer;
}
.nav-item a{
	text-align:center;
}
.navbar-brand{
	p{
		animation-duration:1s;
		display:none;
		color:rgba(255,255,255,0);
		margin-bottom: unset;
		
	}
	img{
		
		animation-duration:0,6s;
		height:100px;
		display:inherit;
		
	}
}
// #navbarCollapse.show{
// margin: 5px -15px -7px -15px;
// background-color:rgba(32, 26, 22, 0.9)!important;
// }
.top-nav-collapse{
	background-color:rgba(32, 26, 22, 0.9)!important;
	.navbar-brand{
		p{
			display:inherit;
			animation-name:fadelogotext;
			-webkit-animation-fill-mode: forwards;
		}
		img{

			animation-name:fadelogo;
			-webkit-animation-fill-mode: forwards;

		}
	}
}
@keyframes fadelogotext {
   	100% {
   		color:rgba(255,255,255,1);
    }
}
@keyframes fadelogo {
    50% {
    	

    }
   	100% {
   		height:0px;
   		opacity:0;
    	display:none;
    }
}

